--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ astroid==2.9.3
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
+numpy==1.22.2
+opencv-python==4.5.5.62
 platformdirs==2.5.1
 pycodestyle==2.8.0
 pyflakes==2.4.0
